# personal_finance_market_agent

./: .env.example  .gitignore  Dockerfile  README.md  bash.exe.stackdump  docker-compose.yml  main.py  pyproject.toml  requirements.txt
eval/: test_eval.py
eval/data/: financial_advisor.test.json
personal_finance_market_agent/: agent.py  prompt.py
personal_finance_market_agent/sub_agents/data_analyst_agent/: agent.py  prompt.py
personal_finance_market_agent/sub_agents/execution_analyst_agent/: agent.py  prompt.py
personal_finance_market_agent/sub_agents/market_news_agent/: agent.py  prompt.py
personal_finance_market_agent/sub_agents/risk_analyst_agent/: agent.py  prompt.py
personal_finance_market_agent/sub_agents/trading_analyst_agent/: agent.py  prompt.py
personal_finance_market_agent/tools/: financial_data.py  news_sentiment.py  stock_price.py
static/: index.html
static/js/: app.js
tests/: test_agents.py
